--- a/04_vogal.html
+++ b/04_vogal.html
@@ -14,7 +14,7 @@
             document.write("È uma vogal.");
             break;
         default:
-            document.write("Não é uma vogal.");
+            document.write("Não é uma vogal!");
             break;
     }
     // SAÍDA
