--- a/07_estacaoAno.html
+++ b/07_estacaoAno.html
@@ -34,7 +34,7 @@
                     document.write("É primavera.");
                     break;
                 default:
-                    alert("Mês inválido!!");
+                    alert("Mês inválido!!!");
                     break;
             }
             break;
