--- a/06_idadeHumana.html
+++ b/06_idadeHumana.html
@@ -8,31 +8,28 @@
     // - cães grandes: fator 7.
 
     // ENTRADA
-    let anos = Number(prompt(`Informe a idade de seu cão`).trim().replace(",","."));
+    let anos = Number(prompt(`Informe a idade de seu cão`).trim().replace(",", "."));
     const porte = prompt(`Qual o porte de seu cão? (Responda com P para pequeno, M para médio e G para grande)`).trim().toLowerCase();
     // PROCESSAMENTO
     switch (porte) {
         case "p":
         case "pequeno":
-            anos = anos *5;
-            document.write(`Seu cachorro tem ${anos} anos de idade`);
+            document.write(`Seu cachorro tem ${(anos * 5)} anos de idade`);
             break;
         case "m":
         case "médio":
-            anos = anos * 6;
-            document.write(`Seu cachorro tem ${anos} anos de idade`);
+            document.write(`Seu cachorro tem ${(anos * 6)} anos de idade`);
             break;
         case "g":
         case "grande":
-            anos = anos * 7;
-            document.write(`Seu cachorro tem ${anos} anos de idade`);
+            document.write(`Seu cachorro tem ${(anos * 7)} anos de idade`);
             break;
         default:
             alert("Porte ou idade inválida!!");
             break;
     }
-   
-    
+
+
     // SAÍDA
 
-    </script>
+</script>
